--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,50 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.nav-item {
+  white-space: nowrap;
+}
+
+#logo {
+  font-size: 30px;
+  color: #35A7FF;
+  padding-left: 12px;
+}
+
+.search-form-control {
+  position: relative;
+}
+
+.search {
+  margin-right: 545px;
+  margin-top: 10px;
+}
+
+.search-form-control .btn {
+  position: absolute;
+  top: 8px;
+  bottom: 8px;
+  right: 8px;
+  background-color: #35A7FF;
+  color: #fff;
+}
+
+.search-form-control .form-control {
+  height: 3.5rem;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border: 1px solid #E7E7E7;
+}
+
+.search-form-control .form-control:focus {
+  border: 1px solid #35A7FF;
+  outline: none !important;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.search {
+  flex-grow: 1;
+  justify-content: flex-start;
+  width: 50%;
+
+}
