initial footer complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,19 @@
 
 
     <%= yield %>
+
+    <div class="footer">
+      <div class="footer-links">
+        <a href="#">Terms</a>
+        <a href="#">Contact us</a>
+        <a href="#">Privacy</a>
+        <a href="#">Help</i></a>
+      </div>
+      <div class="footer-copyright">
+        <i class="far fa-copyright"></i> Repay the delay 2019
+      </div>
+    </div>
+
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
