--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,11 @@
 h2 {
   margin-top: 16px;
   margin-bottom: 16px;
-  color: rgba(3,3,3,0.2);
+  color: rgb(13,28,42);
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
   text-align: center;
 }
+
+
