--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,1 +1,8 @@
-new.html.erb
+<%= simple_form_for [@user, @venue] do |f| %>
+  <%= f.input :name %>
+  <%= f.input :price %>
+  <%= f.input :address %>
+  <%= f.input :description %>
+  <%= f.input :photo %>
+  <%= f.submit %>
+<% end %>
