Venues Controller should now be working

--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@user, @venue] do |f| %>
+<%= simple_form_for @venue do |f| %>
   <%= f.input :name %>
   <%= f.input :price %>
   <%= f.input :address %>
