--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,26 +4,13 @@
     <h1> for your event ... </h1>
    </div>
     <div>form </div>
-
-  </div>
 </div>
 
 
 <h2>Explore</h2>
 <div class="cards">
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1548278651-843b1d7431a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">Go to show</div>
-     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1545153996-9419dd2acf66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80)">Go to show</div>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1425421598808-4a22ce59cc97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">Go to show</div>
+  <% @venues.each do |venue| %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= venue.photo %>')"><%= link_to venue.name, venue_path(venue)%></div>
+  <% end %>
 </div>
-
-<%
-=begin %>
-
-<% @venues.each do |cocktail| %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path venue.photo %>')"><%= link_to venue.name, venue_path(venue)%></div>
-    <% end %>
--%>
-
-<%
-=end %>
 
