--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,4 +1,7 @@
 <div class="venue-img-container">
- <img src="https://images.unsplash.com/photo-1544939514-aa98d908bc47?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
- <div id="venue-heading"><h2>The Castle</h2></div>
+ <img src=<%= @venue.photo %> alt="">
+ <div id="venue-heading">
+  <h2><%= @venue.name %></h2></div>
+
+  <p><%= @venue.description %></p>
 </div>
