--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -1,7 +1,9 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <a class="navbar-brand" href="#">
-    <i class="fas fa-igloo" id="logo"></i>
-  </a>
+
+  <%= link_to root_path, class: 'navbar-brand' do %>
+  <i class="fas fa-igloo", id="logo"></i>
+  <% end %>
+
 
   <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
     <div class="search-form-control form-group">
@@ -15,13 +17,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Add Venue</a>
+         <%= link_to "Add Venue",new_venue_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign up</a>
+        <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Log in</a>
+        <%  if user_signed_in? %>
+          <%= link_to "Sign out",destroy_user_session_path, method: :delete, class: "nav-link" %>
+        <%  else %>
+          <%= link_to "Sign in",new_user_session_path, class: "nav-link" %>
+        <%  end %>
       </li>
     </ul>
   </div>
