--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -4,5 +4,8 @@
   <%= f.input :address %>
   <%= f.input :description %>
   <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden  %>
+
   <%= f.submit %>
 <% end %>
+
