--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -20,7 +20,9 @@
          <%= link_to "Add Venue",new_venue_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
+        <% if user_signed_in? == false %>
         <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+        <% end %>
       </li>
       <li class="nav-item">
         <%  if user_signed_in? %>
