--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,7 +1,6 @@
-
 <div class="container">
   <div class="row">
-   <img class="col-lg-12 pt-4" src=<%= @venue.photo %> alt="">
+   <img class="col-lg-12 pt-4" src=<%= @venue.photo %> alt=''>
   </div>
   <div class="row">
   </div>
@@ -13,41 +12,44 @@
 
 
   <div class="card text-center" >
-    <div class="card-body text-center">
+    <div class="card-body text-centr">
       <h1 class="card-title"><%= @venue.name %></h1>
       <p class="card-text"><%= @venue.description %></p>
       <div class="row">
         <h3 class="text-center">Price from: £<%= @venue.price %></h3>
       </div>
       <div class="row">
-        <h3 class="text-center">Rating: <% if @venue.rating.between?(5, 5)  %>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+        <h3 class="text-center">Rating: <% if @venue.rating.nil? == true %> No ratings yet
+          <% else %>
+            <% if @venue.rating.between?(4.8, 5) %>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-          <% elsif @venue.rating.between?(4.5, 4.99)  %>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+            <% elsif @venue.rating.between?(4.5, 4.799)  %>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-          <% elsif @venue.rating.between?(4, 4.5)  %>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <% elsif @venue.rating.between?(4, 4.5) %>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-          <% elsif @venue.rating.between?(3.5, 3.99)  %>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+            <% elsif @venue.rating.between?(3.5, 3.99) %>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-          <% elsif @venue.rating.between?(3, 3.5) %>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <% elsif @venue.rating.between?(3, 3.5) %>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-          <% elsif @venue.rating.between?(2.5, 2.99)  %>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+            <% elsif @venue.rating.between?(2.5, 2.99) %>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-          <% elsif @venue.rating.between?(2, 2.5) %>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <% elsif @venue.rating.between?(2, 2.5) %>
+            <i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-          <% elsif @venue.rating.between?(1.5, 1.99)  %>
-          <i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+            <% elsif @venue.rating.between?(1.5, 1.99) %>
+            <i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-          <% elsif @venue.rating.between?(1, 1.5)  %>
-          <i class="fas fa-star"></i>
-          <% end  %>
-          (<%= @venue.rating %>)
+            <% elsif @venue.rating.between?(1, 1.5)  %>
+            <i class="fas fa-star"></i>
+            <% end  %>
+            (<%= @venue.rating %>)
+          <% end %>
         </h3>
       </div>
 
