--- a/app/views/bookings/_index.html.erb
+++ b/app/views/bookings/_index.html.erb
@@ -1,4 +1,7 @@
+<div class="cards">
 <% current_user.bookings.each do |booking| %>
 <li><%= booking.check_in %>
-  <%= booking.check_out %></li>
-<% end %>
+ <%= booking.check_out %></li>
+   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= booking.venue.photo %>')"></div>
+ <% end %>
+</div>
