--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -54,7 +54,8 @@
       </div>
 
 <!-- These need to be user_signed_in ?-->
-      <a href="#" class="btn btn-primary">Check Availability</a>
+
+      <%= link_to "Book now",new_venue_booking_path(@venue), class: "btn btn-primary" %>
       <% if current_user == @venue.user %>
         <%= link_to "Edit Venue",edit_venue_path(@venue), class: "btn btn-warning" %>
       <% end %>
