updated logo with flex search + new logo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,4 +22,14 @@ h2 {
   text-align: center;
 }
 
+#logo-text {
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: 24px;
+  vertical-align: bottom;
+}
+
+li {
+  list-style-type: none;
+}
+
 
