--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -1,18 +1,28 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
 
   <%= link_to root_path, class: 'navbar-brand' do %>
-  <i class="fas fa-igloo", id="logo"></i>
+  <div id="logo-text">VenueMenu</div>
   <% end %>
 
-
-  <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+    <li class="text-truncate w-100 mr-3 ml-2">
+        <form class="input-group">
+            <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Explore..." autocomplete="off">
+            <div class="input-group-btn">
+                <button name="button" type="submit" class="btn btn-outline-dark ml-2">Search</button>
+            </div>
+        </form>
+    </li>
+<!--   <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
     <div class="search-form-control form-group">
       <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+
+
+
       <button name="button" type="submit" class="btn btn-flat">
         <i class="fas fa-search"></i> Search
       </button>
     </div>
-  </form>
+  </form> -->
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
