--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,53 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1464145672011-e33b3c1c7f81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
-   <div class="welcometext">
+
+   <%= link_to root_path, class: 'navbar-brand' do %>
+    <div id="logo-text-homepage" >VenueMenu</div>
+    <% end %>
+
+  <div>
+
+
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon" id="navbar-homepage">
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+           <%= link_to "Add Venue",new_venue_path, class: "nav-link", id: "nav-link-white" %>
+        </li>
+        <li class="nav-item">
+          <% if user_signed_in? == false %>
+          <%= link_to "Sign up", new_user_registration_path, class: "nav-link", id: "nav-link-white" %>
+          <% end %>
+        </li>
+        <li class="nav-item">
+          <%  if user_signed_in? %>
+            <%= link_to "Sign out",destroy_user_session_path, method: :delete, class: "nav-link", id: "nav-link-white" %>
+          <%  else %>
+            <%= link_to "Sign in",new_user_session_path, class: "nav-link", id: "nav-link-white" %>
+          <%  end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </div>
+
+  <div class="welcometext">
     <h1> Find unique venues </h1>
     <h1> for your event ... </h1>
-   </div>
-    <div>form </div>
+     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon" id="search_form_home">
+      <li class="text-truncate w-100 mr-3 ml-2">
+          <form class="input-group">
+              <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Explore..." autocomplete="off">
+              <div class="input-group-btn">
+                  <button name="button" type="submit" class="btn btn-outline-dark ml-2">Search</button>
+              </div>
+          </form>
+      </li>
+  </div>
+
+  </div>
 </div>
 
-
-<h2>Explore</h2>
 <div class="cards">
   <% @venues.each do |venue| %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= venue.photo %>')"><%= link_to venue.name, venue_path(venue)%></div>
