--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -1,46 +1,42 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<% if params[:action] == 'home' %>
 
-  <%= link_to root_path, class: 'navbar-brand' do %>
-  <div id="logo-text">VenueMenu</div>
-  <% end %>
+<% else %>
 
-    <li class="text-truncate w-100 mr-3 ml-2">
-        <form class="input-group">
-            <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Explore..." autocomplete="off">
-            <div class="input-group-btn">
-                <button name="button" type="submit" class="btn btn-outline-dark ml-2">Search</button>
-            </div>
-        </form>
-    </li>
-<!--   <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-    <div class="search-form-control form-group">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+
+    <%= link_to root_path, class: 'navbar-brand' do %>
+    <div id="logo-text" >VenueMenu</div>
+    <% end %>
+
+      <li class="text-truncate w-100 mr-3 ml-2">
+          <form class="input-group">
+              <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Explore..." autocomplete="off">
+              <div class="input-group-btn">
+                  <button name="button" type="submit" class="btn btn-outline-dark ml-2">Search</button>
+              </div>
+          </form>
+      </li>
 
 
-
-      <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-search"></i> Search
-      </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+           <%= link_to "Add Venue",new_venue_path, class: "nav-link", id: "nav-link-white"  %>
+        </li>
+        <li class="nav-item">
+          <% if user_signed_in? == false %>
+          <%= link_to "Sign up", new_user_registration_path, class: "nav-link", id: "nav-link-white" %>
+          <% end %>
+        </li>
+        <li class="nav-item">
+          <%  if user_signed_in? %>
+            <%= link_to "Sign out",destroy_user_session_path, method: :delete, class: "nav-link", id: "nav-link-white" %>
+          <%  else %>
+            <%= link_to "Sign in",new_user_session_path, class: "nav-link", id: "nav-link-white"  %>
+          <%  end %>
+        </li>
+      </ul>
     </div>
-  </form> -->
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-         <%= link_to "Add Venue",new_venue_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <% if user_signed_in? == false %>
-        <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
-        <% end %>
-      </li>
-      <li class="nav-item">
-        <%  if user_signed_in? %>
-          <%= link_to "Sign out",destroy_user_session_path, method: :delete, class: "nav-link" %>
-        <%  else %>
-          <%= link_to "Sign in",new_user_session_path, class: "nav-link" %>
-        <%  end %>
-      </li>
-    </ul>
   </div>
-</div>
+
+<% end %>
