profile page with full booking logic and minimal venue logic

--- a/app/assets/stylesheets/components/_card_grid.scss
+++ b/app/assets/stylesheets/components/_card_grid.scss
@@ -58,3 +58,8 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+#btn-color-override {
+  background-color: rgba(13,28,42,0.9);
+  border-color: rgba(13,28,42,0.9);
+}
