fixed seeding photos bug

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
 
 <div class="cards">
   <% @venues.each do |venue| %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= venue.photo %>')"><%= link_to venue.name, venue_path(venue)%></div>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path venue.photo %>')"><%= link_to venue.name, venue_path(venue)%></div>
   <% end %>
 </div>
 
