updates to home, footer and minor show page updates

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -18,8 +18,9 @@
 }
 
 .welcometext {
-  top: 380px;
-  left: 480px;
+  top: 42%;
+  left: 65%;
+  width:350px;
   position: absolute;
   background-color: rgba(0,0,0,0.0);
 }
@@ -41,6 +42,6 @@
   vertical-align: bottom;
   color: white;
   position: absolute;
-  top: 60px;
-  left: 480px;
+  top: 2%;
+  left: 3%;
 }
