--- a/app/assets/stylesheets/components/_card_grid.scss
+++ b/app/assets/stylesheets/components/_card_grid.scss
@@ -63,3 +63,8 @@
   background-color: rgba(13,28,42,0.9);
   border-color: rgba(13,28,42,0.9);
 }
+
+.card-container {
+  width: 85%;
+  margin: 0 auto;
+}
