--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer mt-3">
   <div class="footer-links">
     <a href="#">Terms</a>
     <a href="#">Contact us</a>
