--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -12,7 +12,7 @@
           <form class="input-group">
               <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Explore..." autocomplete="off">
               <div class="input-group-btn">
-                  <button name="button" type="submit" class="btn btn-outline-dark ml-2">Search</button>
+                  <button name="button" type="submit" class="btn btn-outline-light ml-2">Search</button>
               </div>
           </form>
       </li>
