--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -2,74 +2,70 @@
   <div class="row">
    <img class="col-lg-12 pt-4" src=<%= @venue.photo %> alt=''>
   </div>
-  <div class="row">
-  </div>
-  <div class="row">
-    <div class="col-lg-6 ">
-      <p class="text-center"></p>
-    </div>
-  </div>
 
+  <div class="row justify-content-center">
+    <div class="col-lg-9 mt-3">
+      <div class="card text-center" >
+        <div class="card-body text-center">
+          <h1 class="card-title"><%= @venue.name %></h1>
+          <p class="card-text"><%= @venue.description %></p>
+          <div class="row justify-content-center">
+            <h3 class="text-center">Price from: £<%= @venue.price %></h3>
+          </div>
+          <div class="row justify-content-center">
+            <h3 class="text-center">Rating: <% if @venue.rating.nil? == true %> No ratings yet
+              <% else %>
+                <% if @venue.rating.between?(4.8, 5) %>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-  <div class="card text-center" >
-    <div class="card-body text-centr">
-      <h1 class="card-title"><%= @venue.name %></h1>
-      <p class="card-text"><%= @venue.description %></p>
-      <div class="row">
-        <h3 class="text-center">Price from: £<%= @venue.price %></h3>
-      </div>
-      <div class="row">
-        <h3 class="text-center">Rating: <% if @venue.rating.nil? == true %> No ratings yet
-          <% else %>
-            <% if @venue.rating.between?(4.8, 5) %>
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <% elsif @venue.rating.between?(4.5, 4.799)  %>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-            <% elsif @venue.rating.between?(4.5, 4.799)  %>
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+                <% elsif @venue.rating.between?(4, 4.5) %>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-            <% elsif @venue.rating.between?(4, 4.5) %>
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <% elsif @venue.rating.between?(3.5, 3.99) %>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-            <% elsif @venue.rating.between?(3.5, 3.99) %>
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+                <% elsif @venue.rating.between?(3, 3.5) %>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-            <% elsif @venue.rating.between?(3, 3.5) %>
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <% elsif @venue.rating.between?(2.5, 2.99) %>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-            <% elsif @venue.rating.between?(2.5, 2.99) %>
-            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+                <% elsif @venue.rating.between?(2, 2.5) %>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-            <% elsif @venue.rating.between?(2, 2.5) %>
-            <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <% elsif @venue.rating.between?(1.5, 1.99) %>
+                <i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-            <% elsif @venue.rating.between?(1.5, 1.99) %>
-            <i class="fas fa-star"></i><i class="fas fa-star-half"></i>
+                <% elsif @venue.rating.between?(1, 1.5)  %>
+                <i class="fas fa-star"></i>
+                <% end  %>
+                (<%= @venue.rating %>)
+              <% end %>
+            </h3>
+          </div>
 
-            <% elsif @venue.rating.between?(1, 1.5)  %>
-            <i class="fas fa-star"></i>
-            <% end  %>
-            (<%= @venue.rating %>)
+    <!-- These need to be user_signed_in ?-->
+          <div class="booking-form" >
+            <%= simple_form_for [@venue, @booking] do |f| %>
+            <div class="form-inputs">
+              <%= f.input :check_in %>
+              <%= f.input :check_out %>
+            </div>
+            <div class="form-actions">
+            <%= f.button :submit, "Book now", id: "btn-color-override", class: "btn btn-primary" %>
+            </div>
+            <% end %>
+          </div>
+
+          <% if current_user == @venue.user %>
+            <%= link_to "Edit Venue",edit_venue_path(@venue), class: "btn btn-warning" %>
           <% end %>
-        </h3>
-      </div>
 
-<!-- These need to be user_signed_in ?-->
-      <div class="booking-form" >
-        <%= simple_form_for [@venue, @booking] do |f| %>
-        <div class="form-inputs">
-          <%= f.input :check_in %>
-          <%= f.input :check_out %>
         </div>
-        <div class="form-actions">
-        <%= f.button :submit, "Book now", class: "btn btn-primary" %>
-        </div>
-        <% end %>
       </div>
-
-      <% if current_user == @venue.user %>
-        <%= link_to "Edit Venue",edit_venue_path(@venue), class: "btn btn-warning" %>
-      <% end %>
-
     </div>
   </div>
 </div>
