--- a/app/views/venue_reviews/new.html.erb
+++ b/app/views/venue_reviews/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@booking, @review] %>
+<%= simple_form_for [@booking, @review] do |f| %>
   <%= f.input :rating %>
   <%= f.input :description %>
   <%= f.submit %>
