--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,19 +1,19 @@
 <div class="container">
   <div class="row">
-   <img class="col-lg-12 pt-4" src=<%= @venue.photo %> alt=''>
+   <img class="col-lg-12 pt-3" src=<%= @venue.photo %> alt=''>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center overlay">
     <div class="col-lg-9 mt-3">
       <div class="card text-center" >
         <div class="card-body text-center">
-          <h1 class="card-title"><%= @venue.name %></h1>
-          <p class="card-text"><%= @venue.description %></p>
+          <h1 class="card-title mb-4 mt-0"><%= @venue.name %></h1>
+          <p class="card-text "><%= @venue.description %></p>
           <div class="row justify-content-center">
-            <h3 class="text-center">Price from: £<%= @venue.price %></h3>
+            <h3 class="text-center mt-4">Price from: £<%= @venue.price %></h3>
           </div>
           <div class="row justify-content-center">
-            <h3 class="text-center">Rating: <% if @venue.rating.nil? == true %> No ratings yet
+            <h3 class="text-center mb-5">Rating: <% if @venue.rating.nil? == true %> No ratings yet
               <% else %>
                 <% if @venue.rating.between?(4.8, 5) %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
