--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,11 @@ body {
 
 .btn {
   background-color: rgba(13,28,42,0.9);
+  color: white;
+}
+
+.text-align {
+  text-align: center;
 }
 
 .card-img-top.pt-3.rounded {
@@ -46,7 +51,7 @@ body {
 }
 
 .profile_items {
-  background-color: rgba(13,28,42,0.85);
+  background-color: rgba(13,28,42,0.9);
   padding: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -57,6 +62,7 @@ body {
 
   h1 {
     font-size: 34px;
+    margin: 0;
   }
 }
 
