--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -14,23 +14,27 @@
     <% if current_user.venues.count == 0 %>
       <p class= "pl-5 ml-4">You haven't listed any venues yet</p>
     <% else %>
-      <div class="container">
-        <div class="row justify-content-around">
-          <% current_user.venues.each do |venue| %>
-           <div class="card col-lg-5 mr-3 ml-3 mb-5 mt-3">
-            <img class="card-img-top pt-3 rounded" src="<%= venue.photo %>" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title"><%= venue.name %></h3>
-          <a href="<%= venue_path(venue.id) %>" id ="btn-color-override"class="btn btn-primary btn-block">Venue Details</a>
-          <% end %>
+      <div class="col-lg-12">
+        <div class="container">
+          <div class="row justify-content-around">
+            <% current_user.venues.each do |venue| %>
+              <div class="card col-lg-5 mr-3 ml-3 mb-5 mt-3">
+                <img class="card-img-top pt-3 rounded" src="<%= venue.photo %>" alt="Card image cap">
+                <div class="card-body">
+                <h3 class="card-title"><%= venue.name %></h3>
+                <a href="<%= venue_path(venue.id) %>" id ="btn-color-override"class="btn btn-primary btn-block">Venue Details</a>
+                </div>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
     <% end %>
   </div>
+  <div class="text-align">
+  <%= link_to "Add Venue",new_venue_path, class: "btn"  %>
+  </div>
 </div>
 
-
-
-  <%= link_to "Add Venue",new_venue_path  %>
 </div>
 
