--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,9 @@
         <li class="nav-item">
           <% if user_signed_in? == false %>
           <%= link_to "Sign up", new_user_registration_path, class: "nav-link", id: "nav-link-white" %>
-          <% end %>
+          <% else %>
+          <%= link_to "Profile", profile_path, class: "nav-link", id: "nav-link-white" %>
+        <% end %>
         </li>
         <li class="nav-item">
           <%  if user_signed_in? %>
