--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -26,11 +26,16 @@
         <li class="nav-item">
           <% if user_signed_in? == false %>
           <%= link_to "Sign up", new_user_registration_path, class: "nav-link", id: "nav-link-white" %>
+          <% else %>
+          <%= link_to "Profile", profile_path, class: "nav-link", id: "nav-link-white" %>
+
           <% end %>
         </li>
+
         <li class="nav-item">
           <%  if user_signed_in? %>
             <%= link_to "Sign out",destroy_user_session_path, method: :delete, class: "nav-link", id: "nav-link-white" %>
+
           <%  else %>
             <%= link_to "Sign in",new_user_session_path, class: "nav-link", id: "nav-link-white"  %>
           <%  end %>
