--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,13 +52,14 @@ body {
 
 .profile_items {
   background-color: rgba(13,28,42,0.9);
-  padding: 10px;
+  padding: 3px;
   margin-top: 20px;
   margin-bottom: 20px;
   color: white;
   display: flex;
   justify-content: space-around;
   align: center;
+  border-radius: 5px;
 
   h1 {
     font-size: 34px;
