--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="profile_items">
-    <h1 >1. Your Bookings</h1>
+    <h1 >1 - Your Bookings</h1>
   </div>
     <% if current_user.bookings.count == 0%>
       <p class= "pl-5 ml-4">No bookings yet</p>
@@ -9,7 +9,7 @@
     <%= render "bookings/index" %>
   </div>
     <div class="profile_items">
-      <h1 >2. Venues you own</h1>
+      <h1 >2 - Venues you own</h1>
     </div>
     <% if current_user.venues.count == 0 %>
       <p class= "pl-5 ml-4">You haven't listed any venues yet</p>
