Did some work on reviews controllers

--- a/app/views/bookings/_index.html.erb
+++ b/app/views/bookings/_index.html.erb
@@ -6,7 +6,9 @@
    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= booking.venue.photo %>')"></div>
  <% booking.venue_reviews.each do |review| %>
  <li><%= review.rating %>
- <%= review.description %></li>
+ <%= review.description %> <%= link_to "Edit Review", edit_venue_review_path(review), class: "btn btn-primary" %>
+   <%= link_to "Delete review", venue_review_path(review), method: :delete, data: { confirm: "You are about to delete your review" }, class: "btn btn-danger" %>
+ </li>
 <% end %>
  <% end %>
 </div>
