Added a review button in bookings

--- a/app/views/bookings/_index.html.erb
+++ b/app/views/bookings/_index.html.erb
@@ -27,7 +27,7 @@
 
 
           <a href="<%= venue_path(booking.venue_id) %>" id ="btn-color-override"class="btn btn-primary btn-block">Venue Details</a>
-           <%= link_to "Create a Review", new_booking_venue_review_path(booking), class="btn btn-success btn-block" %>
+           <%= link_to "Create a Review", new_booking_venue_review_path(booking), class: "btn btn-success btn-block" %>
 
         </div>
       </div>
