--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,2 +1,34 @@
+<div class="container">
+  <div
+    id="map"
+    class="row"
+    class="col-lg-12 pt-3"
+    style="width: 100%;
+    height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  >
+  </div>
 
+
+
+
+
+  <div class="col-lg-12">
+    <div class="container">
+      <div class="row justify-content-around">
+        <% current_user.bookings.each do |booking| %>
+          <div class="card col-lg-5 mr-3 ml-3 mb-5 mt-3">
+            <img class="card-img-top pt-3 rounded" src="<%= booking.venue.photo %>" alt="Card image cap">
+            <div class="card-body">
+              <h3 class="card-title"><%= booking.venue.name %></h3>
+              <div class="card-title"><strong>Arriving:</strong> <%= booking.check_in %></div>
+            </div>
+            <a href="<%= venue_path(booking.venue_id) %>" id ="btn-color-override"class="btn btn-primary btn-block">Venue Details</a>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
