--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,18 +37,19 @@
     </div>
   </div>
   </div>
-
   <div class="welcometext">
     <h1 class="ml-2"> Find unique venues for your event... </h1>
     <h1 class="ml-2"> </h1>
      <div class="navbar navbar-expand-sm navbar-light navbar-lewagon pl-0 ml-0 mt-2" id="search_form_home">
       <li class="text-truncate w-100 mr-3 ml-2">
-          <form class="input-group">
-              <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Explore..." autocomplete="off">
-              <div class="input-group-btn">
-                  <button name="button" type="submit" class="btn btn-outline-light ml-2">Go</button>
-              </div>
-          </form>
+          <%= form_tag venues_path, :class => "position-form", method: :get do %>
+            <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Explore"
+            %>
+            <%= submit_tag "Go", class: "btn btn-outline-light ml-2" %>
+          <% end %>
       </li>
   </div>
 
@@ -61,6 +62,8 @@
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path venue.photo  unless venue.photo.blank? %>')"><%= link_to venue.name, venue_path(venue)%></div>
   <% end %>
   </div>
+
 </div>
+
 
 
