--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -9,12 +9,14 @@
     <% end %>
 
       <li class="text-truncate w-100 mr-3 ml-2">
-          <form class="input-group">
-              <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Explore..." autocomplete="off">
-              <div class="input-group-btn">
-                  <button name="button" type="submit" class="btn btn-outline-light ml-2">Search</button>
-              </div>
-          </form>
+          <%= form_tag venues_path, :class => "position-form" , method: :get do %>
+            <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Explore"
+            %>
+            <%= submit_tag "Search", class: "btn btn-outline-light ml-2" %>
+          <% end %>
       </li>
 
 
