--- a/app/assets/stylesheets/components/_card_grid.scss
+++ b/app/assets/stylesheets/components/_card_grid.scss
@@ -5,7 +5,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -13,7 +12,17 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 
   a {
-    color: white;
+    color: #fff;
+    text-decoration: none;
+  }
+}
+
+.card-category:hover {
+  opacity: 0.85;
+  transition: 0.9s;
+
+  a {
+    color: rgb(240, 240, 240);
   }
 }
 
