--- a/app/assets/stylesheets/pages/_show-venue.scss
+++ b/app/assets/stylesheets/pages/_show-venue.scss
@@ -1,3 +1,61 @@
 .overlay {
-  margin-top: -83px;
+  margin-top: -90px;
+}
+
+.edit-overlay {
+  margin-top: -620px;
+  margin-right: 15px;
+}
+
+.booking {
+
+  margin-top: -200px;
+  margin-left: 60%;
+  width: 400px;
+  background-color: #fff;
+  z-index: 999;
+  padding: 10px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#show-card {
+  border-radius: 10px;
+  border-color: rgba(13, 28, 42, 0.9);
 }
