search by location

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,7 +46,7 @@
             <%= text_field_tag :query,
               params[:query],
               class: "form-control",
-              placeholder: "Explore"
+              placeholder: "Search by location"
             %>
             <%= submit_tag "Go", class: "btn btn-outline-light ml-2" %>
           <% end %>
