--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -13,7 +13,7 @@
             <%= text_field_tag :query,
               params[:query],
               class: "form-control",
-              placeholder: "Explore"
+              placeholder: "Search by location"
             %>
             <%= submit_tag "Search", class: "btn btn-outline-light ml-2" %>
           <% end %>
